# DAnchor

./: .gitignore  Cargo.toml  LICENSE.md  README.md
crates/danchor-core/: Cargo.toml
crates/danchor-core/src/: lib.rs
crates/danchor-core/src/discovery/: advertiser.rs  device_info.rs  error.rs  mdns_backend.rs  mod.rs  peer.rs  registry.rs  scan.rs
crates/danchor-core/src/input/: error.rs  mod.rs  pipeline.rs  sink.rs  uinput_sink.rs
crates/danchor-core/src/protocol/: error.rs  header.rs  mod.rs  touch.rs  video.rs
crates/danchor-core/src/security/: error.rs  mod.rs
crates/danchor-core/src/transport/: mod.rs  responder.rs  server.rs  session.rs  socket.rs
crates/danchor-core/src/usb/: client.rs  device.rs  error.rs  message.rs  mod.rs  wire.rs
crates/danchor-desktop/: Cargo.toml
crates/danchor-desktop/src/: capture.rs  main.rs
crates/danchor-ffi/: Cargo.toml
crates/danchor-ffi/src/: lib.rs
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/danchor/app/: AppPreferences.kt  ConnectionCard.kt  ConnectionsScreen.kt  DAnchorApp.kt  LiveMirrorPlayer.kt  MainActivity.kt  ManualConnectDialog.kt  Models.kt  Networking.kt  ProfileScreen.kt  SettingsScreen.kt  TabSwitcher.kt  Theme.kt  VideoTestPlayer.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/android/app/src/main/res/values-en/: strings.xml
