[package]
name = "danchor-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mdns-sd = { version = "0.20.1", default-features = false }
plist = { version = "1.10.0", default-features = false }
snow = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
