[package]
name = "danchor-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
danchor-core = { path = "../danchor-core" }
uniffi = { version = "0.32.0", features = ["cli"] }
